--- a/webnewsnhk/202410.html
+++ b/webnewsnhk/202410.html
@@ -231,6 +231,100 @@
 
 2024年10月4日
 
+<h1 class="article-title">
+    <ruby>雨<rt>あめ</rt></ruby>が<ruby>降<rt>ふ</rt></ruby>りやすい<ruby>天気<rt>てんき</rt></ruby>　たくさんの<ruby>雨<rt>あめ</rt></ruby>や<ruby>強<rt>つよ</rt></ruby>い<ruby>風<rt>かぜ</rt></ruby>に<ruby>気<rt>き</rt></ruby>をつけて
+</h1>
+
+    <p><span class="color2"><ruby>雷<rt>かみなり</rt></ruby></span><span class="colorB">や</span><span class="color2"><ruby>急<rt>きゅう</rt></ruby></span><span class="colorB">な</span><span class="color4"><ruby>強<rt>つよ</rt></ruby>い</span><span class="color4"><ruby>風<rt>かぜ</rt></ruby></span><span class="color4">など</span><span class="colorB">に</span><span class="color3"><ruby>気<rt>き</rt></ruby>をつけ</span><span class="colorB">て</span><span class="color3">ください</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="colorC"><ruby>気象庁<rt>きしょうちょう</rt></ruby></span><span class="colorB">によると</span><span class="colorB">、</span><span class="colorL"><ruby>日本<rt>にっぽん</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>近<rt>ちか</rt></ruby>く</span><span class="colorB">に</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>ら</span><span class="colorB">せる</span><span class="color0"><ruby>前線<rt>ぜんせん</rt></ruby></span><span class="colorB">が</span><span class="color4">あり</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="color4"><ruby>４日<rt>よっか</rt></ruby></span><span class="color4"><ruby>午前<rt>ごぜん</rt></ruby></span><span class="colorB">、</span><span class="colorL"><ruby>沖縄県<rt>おきなわけん</rt></ruby></span><span class="colorB">の</span><span class="colorL"><ruby>与那国町<rt>よなぐにちょう</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>近<rt>ちか</rt></ruby>く</span><span class="colorB">では</span><span class="colorB">、</span><span class="color4">とても</span><span class="color4">たくさんの</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>り</span><span class="colorB">ました</span><span class="colorB">。</span><span class="colorB">１</span><span class="color4"><ruby>時間<rt>じかん</rt></ruby></span><span class="colorB">に</span><span class="colorB">100</span><span class="color2">ミリ</span><span class="colorB">ぐらい</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>っ</span><span class="colorB">た</span><span class="color4">ところ</span><span class="colorB">も</span><span class="color4">あり</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="colorL"><ruby>静岡県浜松市<rt>しずおかけんはままつし</rt></ruby></span><span class="colorB">では</span><span class="color4"><ruby>３日<rt>みっか</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>夕方<rt>ゆうがた</rt></ruby></span><span class="colorB">、</span><span class="color4">とても</span><span class="color4"><ruby>強<rt>つよ</rt></ruby>い</span><span class="color4"><ruby>風<rt>かぜ</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>吹<rt>ふ</rt></ruby>き</span><span class="colorB">ました</span><span class="colorB">。</span>
+
+<span class="color4"><ruby>窓<rt>まど</rt></ruby></span><span class="colorB">の</span><span class="color3">ガラス</span><span class="colorB">が</span><span class="color3"><ruby>割<rt>わ</rt></ruby>れ</span><span class="colorB">たり</span><span class="color2"><ruby>屋根<rt>やね</rt></ruby></span><span class="colorB">が</span><span class="color3"><ruby>壊<rt>こわ</rt></ruby>れ</span><span class="colorB">たり</span><span class="color4">する</span><span class="color2"><ruby>被害<rt>ひがい</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>出<rt>で</rt></ruby></span><span class="colorB">ました</span><span class="colorB">。</span>
+
+<span class="color4"><ruby>子<rt>こ</rt></ruby>ども</span><span class="color0"><ruby>１人<rt>ひとり</rt></ruby></span><span class="colorB">が</span><span class="color3">けが</span><span class="colorB">を</span><span class="color4">し</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="colorC"><ruby>気象庁<rt>きしょうちょう</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color4"><ruby>５日<rt>いつか</rt></ruby></span><span class="colorB">まで</span><span class="colorL"><ruby>九州<rt>きゅうしゅう</rt></ruby></span><span class="colorF"><ruby>南部<rt>なんぶ</rt></ruby></span><span class="colorB">や</span><span class="colorL"><ruby>沖縄県<rt>おきなわけん</rt></ruby></span><span class="color4">など</span><span class="colorB">で</span><span class="colorB">は</span><span class="color2"><ruby>雷<rt>かみなり</rt></ruby></span><span class="colorB">や</span><span class="color2"><ruby>急<rt>きゅう</rt></ruby></span><span class="colorB">な</span><span class="color4"><ruby>強<rt>つよ</rt></ruby>い</span><span class="color4"><ruby>風<rt>かぜ</rt></ruby></span><span class="colorB">に</span><span class="color3"><ruby>気<rt>き</rt></ruby>をつける</span><span class="colorB">よう</span><span class="colorB">に</span><span class="color4"><ruby>言<rt>い</rt></ruby>って</span><span class="colorB">います。</span></p>
+
+
+
+<h1 class="article-title">
+    <ruby>石破<rt>いしば</rt></ruby><ruby>総理大臣<rt>そうりだいじん</rt></ruby>「<ruby>国民<rt>こくみん</rt></ruby>に<ruby>信頼<rt>しんらい</rt></ruby>してもらう<ruby>政治<rt>せいじ</rt></ruby>をしていく」
+</h1>
+
+    <p><span class="colorN"><ruby>石破<rt>いしば</rt></ruby></span><span class="color2"><ruby>総理大臣<rt>そうりだいじん</rt></ruby></span><span class="colorB">は</span><span class="color2"><ruby>総理大臣<rt>そうりだいじん</rt></ruby></span><span class="colorB">になって</span><span class="color4"><ruby>初<rt>はじ</rt></ruby>め</span><span class="colorB">て</span><span class="colorB">、</span><span class="color2"><ruby>国会<rt>こっかい</rt></ruby></span><span class="colorB">で</span><span class="color4"><ruby>話<rt>はな</rt></ruby>し</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+<p><span class="colorN"><ruby>石破<rt>いしば</rt></ruby></span><span class="color2"><ruby>総理大臣<rt>そうりだいじん</rt></ruby></span><span class="colorB">は</span><span class="color3"><ruby>政治<rt>せいじ</rt></ruby></span><span class="colorB">と</span><span class="color0">カネ</span><span class="colorB">の</span><span class="color4"><ruby>問題<rt>もんだい</rt></ruby></span><span class="colorB">に</span><span class="color2">つい</span><span class="colorB">て</span><span class="color4"><ruby>話<rt>はな</rt></ruby>し</span><span class="colorB">ました</span><span class="colorB">。</span><span class="colorB">「</span><span class="color3"><ruby>政治<rt>せいじ</rt></ruby></span><span class="colorB">の</span><span class="color2"><ruby>信頼<rt>しんらい</rt></ruby></span><span class="colorB">を</span><span class="color2"><ruby>失<rt>うしな</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span><span class="color2"><ruby>国民<rt>こくみん</rt></ruby></span><span class="colorB">に</span><span class="color2"><ruby>信頼<rt>しんらい</rt></ruby></span><span class="color4">して</span><span class="color3">もらえる</span><span class="colorB">よう</span><span class="colorB">に</span><span class="color4">し</span><span class="colorB">ます</span><span class="colorB">。</span><span class="color4">そして</span><span class="colorB">、</span><span class="color3"><ruby>安全<rt>あんぜん</rt></ruby></span><span class="colorB">で</span><span class="color2"><ruby>豊<rt>ゆた</rt></ruby>か</span><span class="colorB">な</span><span class="colorL"><ruby>日本<rt>にっぽん</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>作<rt>つく</rt></ruby>り</span><span class="colorB">ます</span><span class="colorB">」</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+<p><span class="color3"><ruby>経済<rt>けいざい</rt></ruby></span><span class="colorB">の</span><span class="color2"><ruby>目標<rt>もくひょう</rt></ruby></span><span class="colorB">に</span><span class="color2">つい</span><span class="colorB">て</span><span class="colorB">も</span><span class="color4"><ruby>話<rt>はな</rt></ruby>し</span><span class="colorB">ました</span><span class="colorB">。</span><span class="color4"><ruby>働<rt>はたら</rt></ruby>く</span><span class="color4"><ruby>人<rt>ひと</rt></ruby></span><span class="colorB">に</span><span class="color3"><ruby>払<rt>はら</rt></ruby>わ</span><span class="colorB">なく</span><span class="colorB">て</span><span class="colorB">は</span><span class="color4">いけない</span><span class="color2"><ruby>給料<rt>きゅうりょう</rt></ruby></span><span class="colorB">の</span><span class="color0"><ruby>最低額<rt>さいていがく</rt></ruby></span><span class="colorB">を</span><span class="colorB">2029</span><span class="color4"><ruby>年<rt>ねん</rt></ruby></span><span class="colorB">まで</span><span class="colorB">に</span><span class="colorB">1500</span><span class="color4"><ruby>円<rt>えん</rt></ruby></span><span class="color3"><ruby>以上<rt>いじょう</rt></ruby></span><span class="colorB">に</span><span class="color4">する</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+<p><span class="color2"><ruby>地方<rt>ちほう</rt></ruby></span><span class="colorB">の</span><span class="color3"><ruby>産業<rt>さんぎょう</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>元気<rt>げんき</rt></ruby></span><span class="colorB">に</span><span class="color4">する</span><span class="color3">ため</span><span class="colorB">に</span><span class="colorB">、</span><span class="color4"><ruby>国<rt>くに</rt></ruby></span><span class="colorB">が</span><span class="color2"><ruby>地方<rt>ちほう</rt></ruby></span><span class="colorB">に</span><span class="color2"><ruby>配<rt>くば</rt></ruby>る</span><span class="color4">お<ruby>金<rt>かね</rt></ruby></span><span class="colorB">を</span><span class="colorB">２</span><span class="color3"><ruby>倍<rt>ばい</rt></ruby></span><span class="colorB">に</span><span class="color2"><ruby>増<rt>ふ</rt></ruby>やす</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+<p><span class="color0"><ruby>防災<rt>ぼうさい</rt></ruby></span><span class="color1"><ruby>庁<rt>ちょう</rt></ruby></span><span class="colorB">という</span><span class="color4"><ruby>新<rt>あたら</rt></ruby>しい</span><span class="color2"><ruby>役所<rt>やくしょ</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>作<rt>つく</rt></ruby>る</span><span class="color3"><ruby>準備<rt>じゅんび</rt></ruby></span><span class="colorB">を</span><span class="color2"><ruby>進<rt>すす</rt></ruby>める</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span><span class="color3"><ruby>地震<rt>じしん</rt></ruby></span><span class="colorB">など</span><span class="color1"><ruby>災害<rt>さいがい</rt></ruby></span><span class="colorB">から</span><span class="color2"><ruby>国民<rt>こくみん</rt></ruby></span><span class="colorB">を</span><span class="color2"><ruby>守<rt>まも</rt></ruby>っ</span><span class="colorB">て</span><span class="color3">いき</span><span class="colorB">たい</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+
+<h1 class="article-title">
+    <ruby>宮崎<rt>みやざき</rt></ruby>など４つの<ruby>空港<rt>くうこう</rt></ruby>　<ruby>土<rt>つち</rt></ruby>の<ruby>中<rt>なか</rt></ruby>に<ruby>爆弾<rt>ばくだん</rt></ruby>がないかどうか<ruby>調<rt>しら</rt></ruby>べる
+</h1>
+
+    <p><span class="color4"><ruby>国<rt>くに</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="colorB">４</span><span class="colorB">つ</span><span class="colorB">の</span><span class="color3"><ruby>空港<rt>くうこう</rt></ruby></span><span class="colorB">で</span><span class="color2"><ruby>土<rt>つち</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>中<rt>なか</rt></ruby></span><span class="colorB">に</span><span class="color1"><ruby>爆弾<rt>ばくだん</rt></ruby></span><span class="colorB">が</span><span class="color4">ない</span><span class="colorB">か</span><span class="color4">どう</span><span class="colorB">か</span><span class="colorB"></span><span class="color3"><ruby>調<rt>しら</rt></ruby>べる</span><span class="color3">こと</span><span class="colorB">を</span><span class="color3"><ruby>決<rt>き</rt></ruby>め</span><span class="colorB">ました</span><span class="colorB">。</span>
+<span class="colorB">４</span><span class="colorB">つ</span><span class="colorB">の</span><span class="color3"><ruby>空港<rt>くうこう</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color0"><ruby>宮崎空港<rt>みやざきくうこう</rt></ruby></span><span class="colorB">と</span><span class="colorB">、</span><span class="colorL"><ruby>仙台<rt>せんだい</rt></ruby></span><span class="colorB">、</span><span class="colorL"><ruby>福岡<rt>ふくおか</rt></ruby></span><span class="colorB">、</span><span class="colorL"><ruby>那覇<rt>なは</rt></ruby></span><span class="colorB">の</span><span class="color3"><ruby>空港<rt>くうこう</rt></ruby></span><span class="colorB">です</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="color0"><ruby>宮崎空港<rt>みやざきくうこう</rt></ruby></span><span class="colorB">で</span><span class="colorB"><ruby>２日<rt>ふつか</rt></ruby></span><span class="colorB">、</span><span class="color1"><ruby>爆弾<rt>ばくだん</rt></ruby></span><span class="colorB">が</span><span class="color2"><ruby>爆発<rt>ばくはつ</rt></ruby></span><span class="color4">し</span><span class="colorB">た</span><span class="color4">から</span><span class="colorB">です</span><span class="colorB">。</span><span class="colorB">この</span><span class="color1"><ruby>爆弾<rt>ばくだん</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="colorB">80</span><span class="color4"><ruby>年<rt>ねん</rt></ruby></span><span class="colorB">ぐらい</span><span class="color4"><ruby>前<rt>まえ</rt></ruby></span><span class="colorB">に</span><span class="colorL">アメリカ</span><span class="color2"><ruby>軍<rt>ぐん</rt></ruby></span><span class="colorB">が</span><span class="color3"><ruby>落<rt>お</rt></ruby>とし</span><span class="colorB">て</span><span class="colorB">、</span><span class="colorB"></span><span class="color2"><ruby>土<rt>つち</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>中<rt>なか</rt></ruby></span><span class="colorB">に</span><span class="color4">あり</span><span class="colorB">ました</span><span class="colorB">。</span>
+<span class="colorB">４</span><span class="colorB">つ</span><span class="colorB">の</span><span class="color3"><ruby>空港<rt>くうこう</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color3"><ruby>戦争<rt>せんそう</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>時<rt>とき</rt></ruby></span><span class="colorB">に</span><span class="color0"><ruby>日本軍<rt>にほんぐん</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>使<rt>つか</rt></ruby>っ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">た</span><span class="color3"><ruby>場所<rt>ばしょ</rt></ruby></span><span class="colorB">に</span><span class="colorB"></span><span class="color4">あり</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+
+
+<span class="color2"><ruby>土<rt>つち</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>中<rt>なか</rt></ruby></span><span class="colorB">の</span><span class="color2"><ruby>金属<rt>きんぞく</rt></ruby></span><span class="colorB">を</span><span class="colorB"></span><span class="color3"><ruby>見<rt>み</rt></ruby>つける</span><span class="color3"><ruby>機械<rt>きかい</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>使<rt>つか</rt></ruby>っ</span><span class="colorB">て</span><span class="colorB"></span><span class="color3"><ruby>調<rt>しら</rt></ruby>べ</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+
+<h1 class="article-title">
+    <ruby>東京都<rt>とうきょうと</rt></ruby>に「カスハラ」をなくすための<ruby>条例<rt>じょうれい</rt></ruby>　<ruby>日本<rt>にっぽん</rt></ruby>で<ruby>初<rt>はじ</rt></ruby>めてできた
+</h1>
+
+    <p><span class="colorL"><ruby>東京都<rt>とうきょうと</rt></ruby></span><span class="colorB">が</span><span class="colorB">、</span><span class="colorL"><ruby>日本<rt>にっぽん</rt></ruby></span><span class="colorB">で</span><span class="color4"><ruby>初<rt>はじ</rt></ruby>め</span><span class="colorB">て</span><span class="colorB">「</span><span class="colorF">カスタマー</span><span class="color0">ハラスメント</span><span class="colorB">」</span><span class="colorB">を</span><span class="color4">なくす</span><span class="color3">ため</span><span class="colorB">の</span><span class="color3"><ruby>決<rt>き</rt></ruby>まり</span><span class="colorB">、</span><span class="colorB">「</span><span class="color0"><ruby>条例<rt>じょうれい</rt></ruby></span><span class="colorB">」</span><span class="colorB">を</span><span class="color4"><ruby>作<rt>つく</rt></ruby>り</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="colorF">カスタマー</span><span class="color0">ハラスメント</span><span class="colorB">は</span><span class="colorB">、</span><span class="color3"><ruby>客<rt>きゃく</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>働<rt>はたら</rt></ruby>く</span><span class="color4"><ruby>人<rt>ひと</rt></ruby></span><span class="colorB">に</span><span class="color3">ひどい</span><span class="color3">こと</span><span class="colorB">を</span><span class="color4">する</span><span class="color3">こと</span><span class="colorB">です</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="color4"><ruby>短<rt>みじか</rt></ruby>く</span><span class="colorB">「</span><span class="colorF">カスハラ</span><span class="colorB">」</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>い</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="color0"><ruby>条例<rt>じょうれい</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="colorB">「</span><span class="colorF">カスハラ</span><span class="colorB">」</span><span class="colorB">で</span><span class="color4"><ruby>働<rt>はたら</rt></ruby>く</span><span class="color2"><ruby>環境<rt>かんきょう</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>悪<rt>わる</rt></ruby>く</span><span class="color4">なる</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>っ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span><span class="color4"><ruby>誰<rt>だれ</rt></ruby></span><span class="colorB">も</span><span class="colorF">カスハラ</span><span class="colorB">を</span><span class="color4">して</span><span class="colorB">は</span><span class="color4">いけない</span><span class="colorB">と</span><span class="color3"><ruby>決<rt>き</rt></ruby>め</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+
+
+<p><span class="color4"><ruby>会社<rt>かいしゃ</rt></ruby></span><span class="colorB">など</span><span class="colorB">に</span><span class="colorB">は</span><span class="colorB">「</span><span class="colorF">カスハラ</span><span class="colorB">」</span><span class="colorB">が</span><span class="color2"><ruby>起<rt>お</rt></ruby>こら</span><span class="colorB">ない</span><span class="color2"><ruby>方法<rt>ほうほう</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>考<rt>かんが</rt></ruby>える</span><span class="colorB">よう</span><span class="colorB">に</span><span class="color4"><ruby>言<rt>い</rt></ruby>って</span><span class="colorB">います。</span></p>
+
+
+
+<p><span class="colorB">この</span><span class="color0"><ruby>条例<rt>じょうれい</rt></ruby></span><span class="colorB">は</span><span class="color4"><ruby>来年<rt>らいねん</rt></ruby></span><span class="colorB">４</span><span class="color4"><ruby>月<rt>がつ</rt></ruby></span><span class="color0"><ruby>１日<rt>ついたち</rt></ruby></span><span class="colorB">から</span><span class="colorB">です</span><span class="colorB">。</span></p>
+
+
+
+2024年10月7日
 
 
 <a href="../index.html">Return to Index</a>
