--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
 
 <div>
 
-    <a href="webnewsnhk/202408.html">Sep 2024 Scripts</a>
+    <a href="webnewsnhk/202409.html">Sep 2024 Scripts</a>
 
 </div>
 
 
+
+<div>
+
+    <a href="webnewsnhk/202410.html">Oct 2024 Scripts</a>
+
+</div>
 
 
 </body>
