--- a/webnewsnhk/202507.html
+++ b/webnewsnhk/202507.html
@@ -513,6 +513,109 @@
 
 
 
+2025年7月14日
+
+
+         <h1 class="article-title">
+              <ruby>大阪<rt>おおさか</rt></ruby>・<ruby>関西<rt>かんさい</rt></ruby><ruby>万博<rt>ばんぱく</rt></ruby>　3か<ruby>月<rt>げつ</rt></ruby>で1000<ruby>万<rt>まん</rt></ruby><ruby>人<rt>にん</rt></ruby>が<ruby>来<rt>き</rt></ruby>た
+          </h1>
+ 
+              <p><span class="colorF"><ruby>大阪<rt>おおさか</rt></ruby></span><span class="color0">・</span><span class="color0"><ruby>関西<rt>かんさい</rt></ruby></span><span class="colorB"><ruby>万博<rt>ばんぱく</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>来<rt>き</rt></ruby></span><span class="colorB">た</span><span class="color0"><ruby>人<rt>ひと</rt></ruby></span><span class="colorB">が</span><span class="colorB">1000</span><span class="color4"><ruby>万<rt>まん</rt></ruby></span><span class="color3"><ruby>人<rt>にん</rt></ruby></span><span class="colorB">に</span><span class="color4">なり</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+<p><span class="color0"><ruby>万博<rt>ばんぱく</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color4">4<ruby>月<rt>がつ</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>始<rt>はじ</rt></ruby>まっ</span><span class="colorB">て</span><span class="colorB">10</span><span class="colorB"><ruby>月<rt>がつ</rt></ruby></span><span class="colorB">まで</span><span class="colorB">、</span><span class="colorB">6</span><span class="color3">か<ruby>月<rt>げつ</rt></ruby></span><span class="color3"><ruby>続<rt>つづ</rt></ruby>き</span><span class="colorB">ます</span><span class="colorB">。</span><span class="colorB">13</span><span class="color4"><ruby>日<rt>にち</rt></ruby></span><span class="colorB">で</span><span class="colorB">、</span><span class="color4"><ruby>半分<rt>はんぶん</rt></ruby></span><span class="colorB">の</span><span class="colorB">3</span><span class="color3">か<ruby>月<rt>げつ</rt></ruby></span><span class="colorB">に</span><span class="color4">なり</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+<p><span class="colorB">3</span><span class="color3">か<ruby>月<rt>げつ</rt></ruby></span><span class="colorB">の</span><span class="color3"><ruby>間<rt>あいだ</rt></ruby></span><span class="colorB">に</span><span class="colorB">1008<ruby>万<rt>まん</rt></ruby></span><span class="color4"><ruby>人<rt>にん</rt></ruby></span><span class="colorB">が</span><span class="color0"><ruby>万博<rt>ばんぱく</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>来<rt>き</rt></ruby></span><span class="colorB">ました</span><span class="colorB">。</span><span class="color4">4<ruby>月<rt>がつ</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color4"><ruby>1日<rt>いちにち</rt></ruby></span><span class="colorB">に</span><span class="colorB">8<ruby>万<rt>まん</rt></ruby></span><span class="color3"><ruby>人<rt>にん</rt></ruby></span><span class="color4">ぐらい</span><span class="color4"><ruby>来<rt>き</rt></ruby></span><span class="colorB">て</span><span class="colorB">いました</span><span class="colorB">。</span><span class="colorB">6</span><span class="color4"><ruby>月<rt>がつ</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="colorB">12<ruby>万<rt>まん</rt></ruby></span><span class="color3"><ruby>人<rt>にん</rt></ruby></span><span class="color3"><ruby>以上<rt>いじょう</rt></ruby></span><span class="colorB">に</span><span class="color3"><ruby>増<rt>ふ</rt></ruby>え</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+<p><span class="colorC"><ruby>博覧会協会<rt>はくらんかいきょうかい</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color0"><ruby>万博<rt>ばんぱく</rt></ruby></span><span class="colorB">は</span><span class="color3"><ruby>終<rt>お</rt></ruby>わり</span><span class="color4"><ruby>頃<rt>ごろ</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>来<rt>く</rt></ruby>る</span><span class="color4"><ruby>人<rt>ひと</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>多<rt>おお</rt></ruby>い</span><span class="colorB">ので</span><span class="colorB">、</span><span class="color3"><ruby>混<rt>こ</rt></ruby>む</span><span class="color4"><ruby>前<rt>まえ</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>来<rt>き</rt></ruby></span><span class="colorB">て</span><span class="color4">ほしい</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>っ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+         
+
+         <h1 class="article-title">
+              <ruby>北海道<rt>ほっかいどう</rt></ruby>で<ruby>熊<rt>くま</rt></ruby>が<ruby>人<rt>ひと</rt></ruby>を<ruby>襲<rt>おそ</rt></ruby>った　<ruby>子<rt>こ</rt></ruby>どもたちが<ruby>車<rt>くるま</rt></ruby>やバスで<ruby>学校<rt>がっこう</rt></ruby>に<ruby>行<rt>い</rt></ruby>った
+          </h1>
+ 
+              <p><span class="colorB">12</span><span class="color4"><ruby>日<rt>にち</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>朝<rt>あさ</rt></ruby></span><span class="colorB">、</span><span class="colorL"><ruby>北海道福島<rt>ほっかいどうふくしま</rt></ruby></span><span class="colorL"><ruby>町<rt>ちょう</rt></ruby></span><span class="colorB">で</span><span class="colorB">、</span><span class="color0"><ruby>熊<rt>くま</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>新聞<rt>しんぶん</rt></ruby></span><span class="colorB">を</span><span class="color3"><ruby>届<rt>とど</rt></ruby>け</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">た</span><span class="color4"><ruby>男<rt>おとこ</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>人<rt>ひと</rt></ruby></span><span class="colorB">を</span><span class="color1"><ruby>襲<rt>おそ</rt></ruby>い</span><span class="colorB">ました</span><span class="colorB">。</span><span class="color4"><ruby>男<rt>おとこ</rt></ruby></span><span class="colorB">の</span><span class="colorB"><ruby>人<rt>ひと</rt></ruby>は</span><span class="color3"><ruby>亡<rt>な</rt></ruby>くなり</span><span class="colorB">ました</span><span class="colorB">。</span></p>
+<p><span class="color3"><ruby>警察<rt>けいさつ</rt></ruby></span><span class="colorB">などが</span><span class="color0"><ruby>熊<rt>くま</rt></ruby></span><span class="colorB">を</span><span class="color3">さがし</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">が</span><span class="colorB">、</span><span class="color4">まだ</span><span class="color3"><ruby>見<rt>み</rt></ruby>つかっ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ませ</span><span class="colorB">ん</span><span class="colorB">。</span><span class="color4"><ruby>近<rt>ちか</rt></ruby>く</span><span class="colorB">に</span><span class="colorB">は</span><span class="colorB">、</span><span class="color3"><ruby>小学校<rt>しょうがっこう</rt></ruby></span><span class="colorB">が</span><span class="color4">あっ</span><span class="colorB">て</span><span class="colorB">、</span><span class="color0"><ruby>熊<rt>くま</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>見<rt>み</rt></ruby></span><span class="colorB">た</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>う</span><span class="color0"><ruby>人<rt>ひと</rt></ruby></span><span class="colorB">が</span><span class="colorB">います。</span></p>
+<p><span class="color4"><ruby>14日<rt>じゅうよっか</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>朝<rt>あさ</rt></ruby></span><span class="colorB">、</span><span class="color4"><ruby>子<rt>こ</rt></ruby>どもたち</span><span class="colorB">は</span><span class="color4"><ruby>家族<rt>かぞく</rt></ruby></span><span class="colorB">など</span><span class="colorB">と</span><span class="color4"><ruby>一緒<rt>いっしょ</rt></ruby></span><span class="colorB">に</span><span class="colorB">、</span><span class="color4"><ruby>車<rt>くるま</rt></ruby></span><span class="colorB">や</span><span class="color4">バス</span><span class="colorB">で</span><span class="color4"><ruby>学校<rt>がっこう</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>行<rt>い</rt></ruby>き</span><span class="colorB">ました</span><span class="colorB">。</span><span class="colorB">5</span><span class="colorF"><ruby>年生<rt>ねんせい</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>子<rt>こ</rt></ruby>ども</span><span class="colorB">の</span><span class="color2"><ruby>母親<rt>ははおや</rt></ruby></span><span class="colorB">は</span><span class="colorB">「</span><span class="color4">とても</span><span class="color3"><ruby>心配<rt>しんぱい</rt></ruby></span><span class="colorB">です</span><span class="colorB">。</span><span class="color4"><ruby>子<rt>こ</rt></ruby>ども</span><span class="colorB">も</span><span class="color3"><ruby>怖<rt>こわ</rt></ruby>い</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>っ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span><span class="color4"><ruby>早<rt>はや</rt></ruby>く</span><span class="color0"><ruby>熊<rt>くま</rt></ruby></span><span class="colorB">を</span><span class="color2"><ruby>捕<rt>つか</rt></ruby>まえ</span><span class="colorB">て</span><span class="color4">ほしい</span><span class="colorB">です</span><span class="colorB">」と</span><span class="color4"><ruby>話<rt>はな</rt></ruby>していました</span><span class="colorB">。</span></p>
+<p><span class="color3"><ruby>専門家<rt>せんもんか</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color4"><ruby>夕方<rt>ゆうがた</rt></ruby></span><span class="colorB">から</span><span class="color4"><ruby>朝<rt>あさ</rt></ruby></span><span class="colorB">まで</span><span class="colorB">の</span><span class="color4"><ruby>時間<rt>じかん</rt></ruby></span><span class="colorB">は</span><span class="color0"><ruby>熊<rt>くま</rt></ruby></span><span class="colorB">が</span><span class="color4">よく</span><span class="color3"><ruby>動<rt>うご</rt></ruby>く</span><span class="colorB">ので</span><span class="colorB">、</span><span class="color4"><ruby>外<rt>そと</rt></ruby></span><span class="colorB">に</span><span class="color4"><ruby>出<rt>で</rt></ruby></span><span class="colorB">ない</span><span class="colorB">よう</span><span class="colorB">に</span><span class="color4">し</span><span class="colorB">て</span><span class="color4">ほしい</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>っ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+      
+
+
+         <h1 class="article-title">
+              <ruby>台風<rt>たいふう</rt></ruby>5<ruby>号<rt>ごう</rt></ruby>が<ruby>北<rt>きた</rt></ruby>に<ruby>向<rt>む</rt></ruby>かって<ruby>進<rt>すす</rt></ruby>んでいる
+          </h1>
+
+              <p><span class="color3"><ruby>台風<rt>たいふう</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>来<rt>き</rt></ruby></span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+<p><span class="color3"><ruby>台風<rt>たいふう</rt></ruby></span><span class="colorB">5</span><span class="colorF"><ruby>号<rt>ごう</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="colorL"><ruby>日本<rt>にっぽん</rt></ruby></span><span class="colorB">の</span><span class="colorL"><ruby>太平洋<rt>たいへいよう</rt></ruby></span><span class="color4"><ruby>側<rt>がわ</rt></ruby></span><span class="colorB">を</span><span class="color4"><ruby>北<rt>きた</rt></ruby></span><span class="colorB">に</span><span class="color3"><ruby>向<rt>む</rt></ruby>かっ</span><span class="colorB">て</span><span class="color3"><ruby>進<rt>すす</rt></ruby>んで</span><span class="colorB">います。</span></p>
+
+<p><span class="colorC"><ruby>気象庁<rt>きしょうちょう</rt></ruby></span><span class="colorB">による</span><span class="colorB">と</span><span class="colorB">、</span><span class="colorB">15</span><span class="color4"><ruby>日<rt>にち</rt></ruby></span><span class="colorB">まで</span><span class="colorB">に</span><span class="colorL"><ruby>東北地方<rt>とうほくちほう</rt></ruby></span><span class="colorB">や</span><span class="colorL"><ruby>北海道<rt>ほっかいどう</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>近<rt>ちか</rt></ruby>く</span><span class="colorB">に</span><span class="color4"><ruby>来<rt>き</rt></ruby></span><span class="colorB">ます</span><span class="colorB">。</span><span class="colorL"><ruby>北海道<rt>ほっかいどう</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>上<rt>うえ</rt></ruby></span><span class="colorB">を</span><span class="color3"><ruby>通<rt>とお</rt></ruby>る</span><span class="colorB">かも</span><span class="colorB">しれ</span><span class="colorB">ませ</span><span class="colorB">ん</span><span class="colorB">。</span></p>
+
+<p><span class="color3"><ruby>台風<rt>たいふう</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>近<rt>ちか</rt></ruby>く</span><span class="colorB">に</span><span class="color4"><ruby>来<rt>く</rt></ruby>る</span><span class="colorB">と</span><span class="colorB">、</span><span class="color4">とても</span><span class="color4"><ruby>風<rt>かぜ</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>強<rt>つよ</rt></ruby>く</span><span class="color4">なり</span><span class="colorB">ます</span><span class="colorB">。</span><span class="color4"><ruby>海<rt>うみ</rt></ruby></span><span class="colorB">では</span><span class="colorB">、</span><span class="color2"><ruby>波<rt>なみ</rt></ruby></span><span class="color4">がとても</span><span class="color4"><ruby>高<rt>たか</rt></ruby>く</span><span class="color4">なり</span><span class="colorB">そう</span><span class="colorB">です</span><span class="colorB">。</span><span class="color2"><ruby>雷<rt>かみなり</rt></ruby></span><span class="colorB">が</span><span class="color3"><ruby>落<rt>お</rt></ruby>ち</span><span class="colorB">たり</span><span class="colorB">、</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">が</span><span class="color4">たくさん</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>っ</span><span class="colorB">たり</span><span class="color4">する</span><span class="color3"><ruby>心配<rt>しんぱい</rt></ruby></span><span class="colorB">も</span><span class="color4">あり</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+<p><span class="color4"><ruby>天気<rt>てんき</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>新<rt>あたら</rt></ruby>しい</span><span class="color2"><ruby>情報<rt>じょうほう</rt></ruby></span><span class="colorB">を</span><span class="color3"><ruby>調<rt>しら</rt></ruby>べ</span><span class="colorB">て</span><span class="colorB">、</span><span class="color3"><ruby>気<rt>き</rt></ruby>をつけ</span><span class="colorB">て</span><span class="color3">ください</span><span class="colorB">。</span></p>
+
+
+
+          <h1 class="article-title">
+              <ruby>東海地方<rt>とうかいちほう</rt></ruby>「<ruby>線状降水帯<rt>せんじょうこうすいたい</rt></ruby>」ができて<ruby>雨<rt>あめ</rt></ruby>がたくさん<ruby>降<rt>ふ</rt></ruby>りそう
+          </h1>
+
+              <p><span class="color0"><ruby>低気圧<rt>ていきあつ</rt></ruby></span><span class="colorB">など</span><span class="colorB">が</span><span class="color3"><ruby>原因<rt>げんいん</rt></ruby></span><span class="colorB">で</span><span class="colorB">、</span><span class="colorL"><ruby>西日本<rt>にしにほん</rt></ruby></span><span class="colorB">で</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">が</span><span class="color4">たくさん</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>っ</span><span class="colorB">て</span><span class="colorB">います。</span></p>
+
+<p><span class="colorB">この</span><span class="color4">あと</span><span class="colorL"><ruby>東海地方<rt>とうかいちほう</rt></ruby></span><span class="colorB">の</span><span class="colorL"><ruby>三重県<rt>みえけん</rt></ruby></span><span class="colorB">と</span><span class="colorL"><ruby>愛知県<rt>あいちけん</rt></ruby></span><span class="colorB">、</span><span class="colorL"><ruby>岐阜県<rt>ぎふけん</rt></ruby></span><span class="colorB">、</span><span class="colorL"><ruby>静岡県<rt>しずおかけん</rt></ruby></span><span class="colorB">では</span><span class="colorB">、</span><span class="color3"><ruby>特<rt>とく</rt></ruby>に</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">が</span><span class="color4">たくさん</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>り</span><span class="colorB">そう</span><span class="colorB">です</span><span class="colorB">。</span></p>
+
+<p><span class="colorB">15</span><span class="color4"><ruby>日<rt>にち</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>昼<rt>ひる</rt></ruby></span><span class="colorB">まで</span><span class="colorB">、</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">の</span><span class="color3"><ruby>雲<rt>くも</rt></ruby></span><span class="colorB">が</span><span class="color3"><ruby>線<rt>せん</rt></ruby></span><span class="colorB">の</span><span class="colorB">よう</span><span class="colorB">に</span><span class="color2">つながっ</span><span class="colorB">て</span><span class="colorB">、</span><span class="colorB">「</span><span class="colorF"><ruby>線状降水帯<rt>せんじょうこうすいたい</rt></ruby></span><span class="colorB">」</span><span class="colorB">が</span><span class="color3">できる</span><span class="colorB">かも</span><span class="colorB">しれ</span><span class="colorB">ませ</span><span class="colorB">ん</span><span class="colorB">。</span><span class="colorF"><ruby>線状降水帯<rt>せんじょうこうすいたい</rt></ruby></span><span class="colorB">が</span><span class="color3">できる</span><span class="colorB">と</span><span class="colorB">、</span><span class="color4"><ruby>同<rt>おな</rt></ruby>じ</span><span class="colorB"><ruby>所<rt>ところ</rt></ruby></span><span class="colorB">で</span><span class="color4"><ruby>雨<rt>あめ</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>降<rt>ふ</rt></ruby>り</span><span class="color3"><ruby>続<rt>つづ</rt></ruby>き</span><span class="colorB">ます</span><span class="colorB">。</span><span class="color1"><ruby>災害<rt>さいがい</rt></ruby></span><span class="colorB">が</span><span class="color2"><ruby>起<rt>お</rt></ruby>こる</span><span class="color3"><ruby>危険<rt>きけん</rt></ruby></span><span class="colorB">が</span><span class="color4"><ruby>高<rt>たか</rt></ruby>く</span><span class="color4">なり</span><span class="colorB">ます</span><span class="colorB">。</span></p>
+
+<p><span class="colorC"><ruby>気象庁<rt>きしょうちょう</rt></ruby></span><span class="colorB">は</span><span class="colorB">、</span><span class="color4"><ruby>山<rt>やま</rt></ruby></span><span class="colorB">が</span><span class="color2"><ruby>崩<rt>くず</rt></ruby>れ</span><span class="colorB">たり</span><span class="color4"><ruby>川<rt>かわ</rt></ruby></span><span class="colorB">の</span><span class="color4"><ruby>水<rt>みず</rt></ruby></span><span class="colorB">が</span><span class="color2">あふれ</span><span class="colorB">たり</span><span class="color4">する</span><span class="colorB">かも</span><span class="colorB">しれ</span><span class="colorB">ない</span><span class="colorB">と</span><span class="color4"><ruby>言<rt>い</rt></ruby>っ</span><span class="colorB">て</span><span class="color4">い</span><span class="colorB">ます</span><span class="colorB">。</span><span class="color2"><ruby>雷<rt>かみなり</rt></ruby></span><span class="colorB">や</span><span class="color2"><ruby>急<rt>きゅう</rt></ruby></span><span class="colorB">な</span><span class="color4"><ruby>強<rt>つよ</rt></ruby>い</span><span class="color4"><ruby>風<rt>かぜ</rt></ruby></span><span class="colorB">にも</span><span class="color3"><ruby>気<rt>き</rt></ruby>をつけ</span><span class="colorB">て</span><span class="color3">ください</span><span class="colorB">。</span></p>
+
+
+
+
+
+2025年7月日
+
+
+
+
+
+
+2025年7月日
+
+
+
+
+
+2025年7月日
+
+
+
+
+
+2025年7月日
+
+
+
+
+
+2025年7月日
+
+
+
+
+2025年7月日
+
+
+
+
+2025年7月日
+
+
+
+
+
+2025年7月日
+
+
+
+
+
 2025年7月日
 
 
